--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     </div>
   </section>
 <!-- Why TrailVista Section -->
-<!-- Why TrailVista Section -->
 <section class="py-5 bg-white">
   <div class="container text-center">
     <h2 class="mb-4">Why choose TrailVista?</h2>
@@ -216,7 +215,7 @@
       <div class="carousel-inner rounded shadow">
 
         <div class="carousel-item active position-relative">
-          <img src="/assets/home/inspiration/sunset-beach-toast.jpeg" class="d-block w-100" alt="Sunset Beach Toast">
+          <img src="./assets/home/inspiration/sunset-beach-toast.jpeg" class="d-block w-100" alt="Sunset Beach Toast">
           <div class="overlay-title">Sunset Beach Toast</div>
         </div>
       
@@ -269,9 +268,6 @@
     </div>
   </div>
 </section>
-
-
-
 
 <!-- Testimonials Section -->
 <section class="py-5 bg-light">
