--- a/about.html
+++ b/about.html
@@ -11,7 +11,11 @@
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Google Fonts: Inter + Playfair Display -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-
+<!-- Favicon universal -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<!-- Navegadores modernos -->
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </head>
 <body>
 
