--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,11 @@
 <link href="./css/style.css" rel="stylesheet">
 <!-- Google Fonts: Inter + Playfair Display -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;family=Playfair+Display:wght@600&amp;display=swap" rel="stylesheet"/>
+<!-- Favicon universal -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<!-- Navegadores modernos -->
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 </link></head>
 <body>
 <!-- NAVBAR -->
