--- a/construction.html
+++ b/construction.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Under Construction</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon universal -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<!-- Navegadores modernos -->
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <style>
     body {
       background-image: url('./assets/about/about-hero-banner.jpg'); 
